bugfix(style): Descriptions visible

--- a/client/src/app/components/edit-item-area/edit-item-area.component.scss
+++ b/client/src/app/components/edit-item-area/edit-item-area.component.scss
@@ -5,8 +5,8 @@
 }
 
 .content > * {
-    width: 75px; /* Largeur fixe pour chaque élément */
-    height: 75px; /* Hauteur fixe pour chaque élément */
+    width: 50; /* Largeur fixe pour chaque élément */
+    height: 50px; /* Hauteur fixe pour chaque élément */
     box-sizing: border-box; /* Inclure les bordures et les padding dans les dimensions */
     display: flex; 
     justify-content: center; 
